# open-codex-gui

./: .gitignore  BACKEND_TESTS_SUMMARY.md  CONTRIBUTING.md  README.md  TESTING_QUICK_START.md  start.ps1  start.sh
backend/: .env.example  AGENT_ANALYSIS_SESSION_b50375f7.md  README.md  pyproject.toml
backend/N/A/project_files/: prompt_test.md
backend/app/: __init__.py  main.py
backend/app/api/routes/: chat.py  files.py  projects.py
backend/app/api/websocket/: chat_handler.py
backend/app/core/: config.py
backend/app/core/agent/: executor.py  templates.py
backend/app/core/llm/: provider.py
backend/app/core/sandbox/: container.py  manager.py  security.py
backend/app/core/storage/: __init__.py  project_volume_storage.py  storage_factory.py  volume_storage.py
backend/app/models/database/: __init__.py  agent_action.py  chat_session.py  content_block.py
backend/app/models/schemas/: __init__.py  content_block.py  message.py
backend/migrations/: add_agent_action_metadata.py  migrate_files_to_project_volumes.py  migrate_to_content_blocks.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/core/: test_config.py
backend/tests/integration/: __init__.py  conftest.py  test_api_agent_config.py  test_api_chat_sessions.py  test_api_messages.py  test_api_projects.py  test_container_management.py  test_database.py  test_environment_setup.py  test_project_lifecycle.py  test_websocket_chat.py
backend/tests/unit/: test_agent_action_persistence.py  test_agent_multiple_tool_calls.py  test_agent_streaming.py  test_cancel_streaming.py
(+63 files in other folders)
