[tool.poetry]
name = "open-claude-ui-backend"
version = "0.1.0"
description = "Open Claude UI - Self-hosted Claude interface"
authors = ["Ziyang Song <soongziyang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
litellm = "^1.55.9"
docker = "^7.1.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
cryptography = "^46.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
black = "^24.10.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
